--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,9 @@
 /* Colour Hex Codes
 ==================================================
   White: #fff
-  Blue: #437dd9
+  Blue: #50E3C2
   Turquoise: #50e3c2
-  Pink: #ff73b3
+  Pink: #50E3C2
   Black: #2e2e2e;
 */
 
@@ -73,7 +73,7 @@ a {
 }
 
 .color {
-    color: #FF73B3;
+    color: #50E3C2;
     font-size: 11px;
 }
 
@@ -381,6 +381,71 @@ p, a {
   margin-left: 30px;
 }
 
+/* services
+==================================================*/
+.services {
+  background: #fff;
+  width: 100%;
+  height: 100vh;
+  display: table;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.services .table-cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.services-title h1 {
+  text-transform: none;
+  font-size: 60px;
+  text-align: center;
+  padding-bottom: 50px;
+  color: #2e2e2e;
+}
+
+.services-title h4 {
+  color: #50E3C2;
+  letter-spacing: 2px;
+  font-size: 14px;
+  text-align: center;
+}
+
+.services-title hr {
+  width: 10%;
+  border: 2px solid #50E3C2;
+}
+
+.services .col-md-4 {
+  padding: 0px 75px;
+  margin-top: 50px;
+}
+
+.services h2 {
+  color: #2e2e2e;
+  font-size: 25px;
+}
+
+.services p {
+  color: #2e2e2e;
+}
+
+.services i {
+  color: #50E3C2;
+  font-size: 20px;
+}
+
+.services-arrow .ion-arrow-down-c {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: 20px;
+  color: #50E3C2;
+  margin-top: 15px;
+}
+
 /* about
 ==================================================*/
 .about {
@@ -407,12 +472,8 @@ p, a {
   text-align: left;
 }
 
-.about-title {
-  margin-top: 25px;
-}
-
 .about h4 {
-  color: #FF73B3;
+  color: #50E3C2;
   letter-spacing: 2px;
   font-size: 14px;
   text-align: left;
@@ -421,7 +482,7 @@ p, a {
 
 .about hr {
   width: 100px;
-  border: 2px solid #FF73B3;
+  border: 2px solid #50E3C2;
   float: left;
 }
 
@@ -442,79 +503,17 @@ div.about-text {
   color: #2e2e2e;
 }
 
+.about-title img.kenan {
+  width: 200px;
+}
+
 .about-arrow .ion-arrow-down-c {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
   font-size: 20px;
-  color: #FF73B3;
-}
-
-
-/* services
-==================================================*/
-.services {
-  background: #fff;
-  width: 100%;
-  height: 100vh;
-  display: table;
-  padding-top: 60px;
-  padding-bottom: 40px;
-}
-
-.services .table-cell {
-  display: table-cell;
-  vertical-align: middle;
-}
-
-.services-title h1 {
-  text-transform: none;
-  font-size: 60px;
-  text-align: center;
-  padding-bottom: 50px;
-  color: #2e2e2e;
-}
-
-.services-title h4 {
-  color: #437dd9;
-  letter-spacing: 2px;
-  font-size: 14px;
-  text-align: center;
-}
-
-.services-title hr {
-  width: 10%;
-  border: 2px solid #437dd9;
-}
-
-.services .col-md-4 {
-  padding: 0px 75px;
-  margin-top: 50px;
-}
-
-.services h2 {
-  color: #2e2e2e;
-  font-size: 25px;
-}
-
-.services p {
-  color: #2e2e2e;
-}
-
-.services i {
-  color: #437dd9;
-  font-size: 20px;
-}
-
-.services-arrow .ion-arrow-down-c {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-  font-size: 20px;
-  color: #437dd9;
-  margin-top: 15px;
+  color: #50E3C2;
 }
 
 /* portfolio section
@@ -552,7 +551,7 @@ div.about-text {
 }
 
 .portfolio .categories-grid .categories ul li a.active {
-    background: #FF73B3;
+    background: #50E3C2;
     color: #fff;
     text-decoration: none;
     border-radius: 50px;
@@ -605,7 +604,7 @@ div.about-text {
 .portfolio_item .portfolio_item_hover .item_info em {
     font-style: normal;
     display: inline-block;
-    border: 1px solid #FF73B3;
+    border: 1px solid #50E3C2;
     padding: 5px 20px;
     color: #fff;
     margin-top: 10px;
@@ -648,7 +647,6 @@ div.about-text {
 
 /* contact section
 ==================================================*/
-
 #contact {
   background-image: url("../images/pattern.svg");
   background-size: 800px;
@@ -659,10 +657,22 @@ div.about-text {
   display: table;
 }
 
+#contact .table-cell {
+    display: table-cell;
+    vertical-align: middle;
+}
+
 .contact-title {
   text-transform: none;
   text-align: center;
   font-size: 60px;
+}
+
+#contact h4 {
+  color: #50E3C2;
+  letter-spacing: 2px;
+  font-size: 14px;
+  text-align: center;
 }
 
 .form-control {
