--- a/css/project.css
+++ b/css/project.css
@@ -21,30 +21,29 @@ p {
   font-weight: 100;
 }
 
-.main-container {
-  padding: 0 0 50px 0;
-}
-
 .project-title {
-  width: 100% !important;
+  height: 300px;
   background-image: url("../images/pattern.svg");
-  background-position: center;
-  height: 400px;
-  /*margin-top: 60px;*/
+  background-repeat: repeat;
   text-align: center;
 }
 
 .project-title h1 {
-  vertical-align: baseline;
   color: #50E3C2;
-  line-height: 390px;
-  margin: 0;
+  line-height: 290px;
+}
+
+.main-container {
+  padding: 0 0 50px 0;
 }
 
 .site-link {
+  /*border: 1px solid #2e2e2e;*/
+  /*background-color: #fff;*/
+  /*color: #2e2e2e;*/
   border: 1px solid #50E3C2;
-  background-color: #fff;
-  color: #50E3C2;
+  background-color: #50E3C2;
+  color: #fff;
   padding: 10px 25px;
   border-radius: 35px;
   text-transform: uppercase;
@@ -54,6 +53,7 @@ p {
 .site-link:hover {
   text-decoration: none;
   background-color: #50E3C2;
+  border: 1px solid #50E3C2;
   box-shadow: 0 10px 50px rgba(0, 0, 0, 0.25);
   color: #fff;
 }
