--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ h4, h5, h6 {
 
 p, a {
   font-family: "Soleil", sans-serif;
-  font-weight: 300;
+  font-weight: 100;
 }
 
 /* preloader
@@ -147,7 +147,7 @@ p, a {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #4E8EF7;
+    background-color: #50e3c2;
     opacity: 0.6;
     position: absolute;
     top: 0;
@@ -197,15 +197,6 @@ p, a {
   z-index: 1;
 }
 
-.nav-shadow {
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
-  -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
-  -moz-box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
-  -o-box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
-  -ms-box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
-  background: #fff !important;
-}
-
 .navbar-default .navbar-nav>li>a {
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -214,7 +205,13 @@ p, a {
   padding-right: 0;
   margin: -10px 15px 0 15px;
   color: #2e2e2e;
-  font-weight:bold;
+  font-weight: bold;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.25 ease-in-out;
+  -webkit-transition: all 0.25 ease-in-out;
+  -moz-transition: all 0.25 ease-in-out;
+  -o-transition: all 0.25 ease-in-out;
 }
 
 .navbar-default .navbar-nav>li>a:focus {
@@ -292,14 +289,22 @@ p, a {
 @media only screen and (max-width: 767px) {
   .logo-collapsed {
     display: block;
-    margin-top: 15px;
-    margin-left: 15px;
-    width: 50px;
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 40px;
   }
 
   .navbar .container-fluid .navbar-brand {
     display: none;
   }
+}
+
+/* home page general
+==================================================*/
+.home-page {
+  background-image: url("../images/pattern.svg");
+  background-size: 800px;
+  background-repeat: repeat;
 }
 
 /* hero
@@ -308,13 +313,10 @@ p, a {
 .hero {
     text-align: center;
     display: table;
-    height: 100vh;
+    margin-top: 25px;
     width: 100%;
-    background-image: url("../images/pattern.svg");
-    background-size: 800px;
-    background-repeat: repeat;
-    /*background-position: center center;*/
-    position: relative;
+    margin-bottom: 75px;
+    /*border-bottom: 1px solid #50E3C2;*/
 }
 
 .hero .table-cell {
@@ -332,27 +334,45 @@ p, a {
     left: 50%;
 }
 
-.hero-button a {
-  position: absolute;
-  top: 75%;
-  left: 50%;
-  transform: translateX(-50%);
+.social-media {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   text-align: center;
-  transition: all ease-in-out 0.3s;
-  -webkit-transition: all ease-in-out 0.3s;
-  background: #50e3c2;
-  color: #fff;
-  text-transform: uppercase;
-  border-radius: 30px;
-  padding: 10px 30px;
 }
 
-.hero-button a:hover {
+.social-media li {
+  display: inline-block;
+  padding: 0 10px;
+  font-size: 20px;
+  transition: ease-in-out 0.2s all;
+  -webkit-transition: ease-in-out 0.2s all;
+  -moz-transition: ease-in-out 0.2s all;
+  -o-transition: ease-in-out 0.2s all;
+}
+
+.ion-social-twitter {
+  color: #1DA1F2;
+}
+
+.ion-social-linkein {
+  color: #0077B5;
+}
+
+.ion-social-dribbble {
+  color: #EA4C89;
+}
+
+.ion-email {
+  color: #2e2e2e;
+}
+
+.social-media li:hover {
+  opacity: 0.8;
   text-decoration: none;
-  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.25);
 }
 
-.hero-button a:focus, .hero-button a:active {
+.social-media li:active, .social-media li:focus {
   text-decoration: none;
 }
 
@@ -384,6 +404,56 @@ p, a {
 
 .title-text {
   margin-left: 30px;
+}
+
+/* projects
+==================================================*/
+.projects {
+  padding: 0;
+}
+
+.project {
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-position: center center;
+  position: relative;
+  border: none;
+  height: 300px;
+  overflow: hidden;
+}
+
+.overlay {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  transition: all .3s ease-out;
+  -webkit-transition: all .3s ease-out;
+  -moz-transition: all .3s ease-out;
+  -o-transition: all .3s ease-out;
+}
+
+.overlay:hover {
+  background-color: rgba(46, 46, 46, 0.7);
+  /*background-color: rgba(80, 227, 194, 1);*/
+}
+
+.overlay img {
+  max-width: 300px;
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 3;
 }
 
 /* services
@@ -521,135 +591,6 @@ div.about-text {
   color: #50E3C2;
 }
 
-/* portfolio section
-==================================================*/
-
-#portfolio {
-  background: #fff;
-  padding-top: 50px;
-}
-
-.portfolio .categories-grid span {
-    font-size: 30px;
-    margin-bottom: 30px;
-    display: inline-block;
-}
-
-.portfolio .categories-grid .categories ul li {
-    list-style: none;
-    margin: 20px 0;
-}
-
-.portfolio .categories-grid .categories ul li a {
-    display: inline-block;
-    color: #2e2e2e;
-    margin: 0 5px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    padding: 2px 15px;
-}
-
-.portfolio .categories-grid .categories ul li a:hover,
-.portfolio .categories-grid .categories ul li a:focus {
-    text-decoration: none;
-    color: #2e2e2e;
-}
-
-.portfolio .categories-grid .categories ul li a.active {
-    background: #50E3C2;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 50px;
-}
-
-.portfolio_filter {
-    padding-left: 0;
-}
-
-.portfolio_item {
-    position: relative;
-    overflow: hidden;
-    display: block;
-}
-
-.portfolio_item .portfolio_item_hover {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, .8);
-    opacity: 0;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-}
-
-.portfolio_item .portfolio_item_hover .item_info {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    padding: 10px;
-    width: 100%;
-}
-
-.portfolio_item .portfolio_item_hover .item_info span {
-    display: block;
-    color: #fff;
-    font-size: 18px;
-    /*-webkit-transition: all .1s ease-in-out .1s;*/
-    /*transition: all .1s ease-in-out .1s;*/
-    opacity: 0;
-}
-
-.portfolio_item .portfolio_item_hover .item_info em {
-    font-style: normal;
-    display: inline-block;
-    border: 1px solid #50E3C2;
-    padding: 5px 20px;
-    color: #fff;
-    margin-top: 10px;
-    /*-webkit-transition: all .1s ease-in-out .1s;*/
-    /*transition: all .1s ease-in-out .1s;*/
-    opacity: 0;
-    font-size: 10px;
-    letter-spacing: 2px;
-}
-
-.portfolio_item:hover .portfolio_item_hover {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-}
-
-.portfolio_item:hover .item_info em,
-.portfolio_item:hover .item_info span {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-}
-
-.portfolio .categories-grid .categories ul li {
-    float: left;
-}
-
-.portfolio_filter {
-    padding-left: 0;
-    display: inline-block;
-    margin: 0 auto;
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-.portfolio-inner {
-    padding-bottom: 0 !important;
-    padding-top: 55px;
-}
-
 /* contact section
 ==================================================*/
 #contact {
@@ -717,4 +658,26 @@ div.about-text {
 
 form {
   margin-top: 30px;
+}
+
+/* footer section
+==================================================*/
+.footer {
+  width: 100%;
+  background: #fff;
+  height: 80px;
+  text-align: center;
+}
+
+.footer .email {
+  color: #2e2e2e;
+  font-size;
+}
+
+.footer .email:hover {
+  text-decoration: none;
+}
+
+.footer .social-media {
+  vertical-align: middle;
 }
