--- a/css/style.css
+++ b/css/style.css
@@ -422,11 +422,23 @@ nav .button:focus, nav .button:active {
   padding: 0 0 .15rem;
 }
 
-[off-canvas] .side-nav-wrapper a .side-logo {
+[off-canvas] .side-nav-wrapper a div.side-logo {
   width: 75px;
+  height: 75px;
   margin-bottom: 15px;
   display: inline-block;
   margin-top: 13px;
+  background-image: url("../images/logo-black.svg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  transition: ease-in-out 0.3s all;
+  -webkit-transition: ease-in-out 0.3s all;
+  -moz-transition: ease-in-out 0.3s all;
+  -o-transition: ease-in-out 0.3s all;
+}
+
+[off-canvas] .side-nav-wrapper a div.side-logo:hover {
+  background-image: url("../images/logo-turquoise.svg");
 }
 
 [off-canvas] .social-media {
@@ -883,4 +895,32 @@ form {
 
 .bg-404 .social-media {
   margin-top: 20px;
+}
+
+/* thank you page
+==================================================*/
+.thanks {
+  background-image: url("../images/pattern.svg");
+  background-size: 650px;
+  background-repeat: repeat;
+  display: table;
+  width: 100%;
+  height: 100vh;
+}
+
+.thanks .table-cell {
+  text-align: center;
+}
+
+.thanks h1, .thanks h2 {
+  margin: 15px;
+  line-height: 65px;
+}
+
+.thanks h1 {
+  font-size: 86px;
+}
+
+.thanks h2 {
+  color: #50E3C2;
 }
