--- a/css/style.css
+++ b/css/style.css
@@ -519,14 +519,14 @@ nav .button:focus, nav .button:active {
 [off-canvas] .side-nav-links a:hover:before,
 [off-canvas] .side-nav-links a:focus:before,
 [off-canvas] .side-nav-links a:active:before,
-.active {
+[off-canvas] .side-nav-links li a.active:before {
     right: 0;
 }
 
 [off-canvas] .side-nav-links a:hover,
 [off-canvas] .side-nav-links a:focus,
 [off-canvas] .side-nav-links a:active,
-.active {
+[off-canvas] .side-nav-links li a.active {
     text-decoration: none;
     color: #50E3C2;
 }
