--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 ==================================================
   White: #fff
   Turquoise: #50e3c2
-  Black: #2e2e2e;
+  Black: #000;
 */
 
 /* General
@@ -33,12 +33,15 @@
 html,
 body {
     height: 100%;
+    width: 100%;
     font-family: 'Soleil', sans-serif;
     line-height: 1.8;
     font-weight: 400;
     letter-spacing: 1px;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    color: #000;
 }
 
 body {
@@ -107,17 +110,11 @@ a {
   vertical-align: middle;
 }
 
-.fixed {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%;
-}
-
 /* typography
 ==================================================*/
 
 h1 {
-    color: #2e2e2e;
+    color: #000;
     font-size: 60px;
 }
 
@@ -218,15 +215,16 @@ p, a {
 /* header
 ==================================================*/
 nav {
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
-  background: transparent;
+  background-color: transparent;
   height: 60px;
   line-height: 60px;
   font-size: 24px;
   font-weight: 400;
   right: 0;
+  z-index: 1;
 }
 
 nav .button {
@@ -303,7 +301,6 @@ nav .button:focus, nav .button:active {
   }
 }
 
-[canvas=container],
 [off-canvas] {
     padding: 10px 20px;
 }
@@ -312,28 +309,13 @@ nav .button:focus, nav .button:active {
     cursor: pointer;
 }
 
-/* Canvas */
+ /*Canvas*/
 
 [canvas] {
 	z-index: 1;
 }
 
-[canvas=container] {
-	width: 100%;
-	height: 100%;
-	overflow-y: auto;
-	position: relative;
-	background-color: white;
-	-webkit-overflow-scrolling: touch; /* Enables momentum scrolling on iOS devices, may be removed by setting to 'auto' in your own CSS. */
-}
-
-[canvas=container]:before, [canvas=container]:after {
-	clear: both;
-	content: '';
-	display: table;
-}
-
-/* Off-Canavs */
+ /*Off-Canavs*/
 
 [off-canvas] {
 	display: none;
@@ -341,8 +323,7 @@ nav .button:focus, nav .button:active {
 	overflow: hidden;
 	overflow-y: auto;
 	color: #000;
-	-webkit-overflow-scrolling: touch; /* Enables momentum scrolling on iOS devices, may be removed by setting to 'auto' in your own CSS. */
-  /*background-color: #50E3C2;*/
+	-webkit-overflow-scrolling: touch;
   background-color: #fff;
   box-shadow: inset -15px 0 33px -14px rgba(0, 0, 0, 0.25);
   text-align: center;
@@ -445,30 +426,15 @@ nav .button:focus, nav .button:active {
   margin-top: 15px;
 }
 
-/* Animation */
+ /*Animation*/
 
 [canvas], [off-canvas] {
-	-webkit-transform: translate( 0px, 0px );
-	    -ms-transform: translate( 0px, 0px );
-	        transform: translate( 0px, 0px );
-	-webkit-transition: -webkit-transform 300ms;
-	        transition:         transform 300ms;
-	-webkit-backface-visibility: hidden; /* Prevents flickering, may be removed if experiencing problems with fixed background images in Chrome. */
-}
-
-[off-canvas*=shift][off-canvas*=top] {
-	-webkit-transform: translate( 0px, 50% );
-	        transform: translate( 0px, 50% );
-}
-
-[off-canvas*=shift][off-canvas*=right] {
-	-webkit-transform: translate( -50%, 0px );
-	        transform: translate( -50%, 0px );
-}
-
-[off-canvas*=shift][off-canvas*=bottom] {
-	-webkit-transform: translate( 0px, -50% );
-	        transform: translate( 0px, -50% );
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+  -webkit-transition: -webkit-transform .3s;
+  transition: transform .3s;
+  -webkit-backface-visibility: hidden
 }
 
 [off-canvas*=shift][off-canvas*=left] {
@@ -476,7 +442,7 @@ nav .button:focus, nav .button:active {
 	        transform: translate( 50%, 0px );
 }
 
-/* Print */
+ /*Print*/
 
 @media print {
 	[canvas] {
@@ -490,7 +456,7 @@ nav .button:focus, nav .button:active {
 	}
 }
 
-/* Nav Link Hover Effect */
+ /*Nav Link Hover Effect*/
 
 @media (min-width: 832px) {
     .side-nav-links > ul > li {
@@ -519,14 +485,14 @@ nav .button:focus, nav .button:active {
 [off-canvas] .side-nav-links a:hover:before,
 [off-canvas] .side-nav-links a:focus:before,
 [off-canvas] .side-nav-links a:active:before,
-[off-canvas] .side-nav-links li a.active:before {
+[off-canvas] .side-nav-links li.active a:before {
     right: 0;
 }
 
 [off-canvas] .side-nav-links a:hover,
 [off-canvas] .side-nav-links a:focus,
 [off-canvas] .side-nav-links a:active,
-[off-canvas] .side-nav-links li a.active {
+[off-canvas] .side-nav-links li.active a {
     text-decoration: none;
     color: #50E3C2;
 }
@@ -543,7 +509,7 @@ nav .button:focus, nav .button:active {
 .hero h5 {
     letter-spacing: 4px;
     text-transform: uppercase;
-    color: #2e2e2e;
+    color: #000;
     font-weight: 300;
     line-height: 1.7;
 }
@@ -629,9 +595,35 @@ nav .button:focus, nav .button:active {
   z-index: 3;
 }
 
-/* about page general
-==================================================*/
+.overlay p {
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 3;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 18px;
+}
 
+/* about intro
+==================================================*/
+.about-intro {
+  padding: 150px 0 50px 0;
+  display: table;
+  text-align: center;
+  background: linear-gradient(to left right, #50A2C2, #50C0C2, #50D6C2, #50E3C2);
+  background: -webkit-linear-gradient(to left right, #50A2C2, #50C0C2, #50D6C2, #50E3C2);
+}
+
+.about-intro-text {
+
+}
+
+.about-intro-text h1 {
+  color: #000;
+}
 
 /* services
 ==================================================*/
@@ -647,12 +639,7 @@ nav .button:focus, nav .button:active {
   text-transform: none;
   font-size: 60px;
   text-align: center;
-  color: #2e2e2e;
-}
-
-.services-title hr {
-  width: 10%;
-  border: 2px solid #50E3C2;
+  color: #000;
 }
 
 .services .col-md-4 {
@@ -661,12 +648,12 @@ nav .button:focus, nav .button:active {
 }
 
 .services h2 {
-  color: #2e2e2e;
+  color: #000;
   font-size: 25px;
 }
 
 .services p {
-  color: #2e2e2e;
+  color: #000;
 }
 
 .services i {
@@ -711,20 +698,6 @@ nav .button:focus, nav .button:active {
   text-align: left;
 }
 
-.about h4 {
-  color: #50E3C2;
-  letter-spacing: 2px;
-  font-size: 14px;
-  text-align: left;
-  margin-top: 0;
-}
-
-.about hr {
-  width: 100px;
-  border: 2px solid #50E3C2;
-  float: left;
-}
-
 div.about-text {
   width: 75%;
   padding-bottom: 15px;
@@ -734,12 +707,12 @@ div.about-text {
   font-size: 25px;
 }
 
-.about h2, .about h1 {
-  color: #2e2e2e;
+.about h2 {
+  color: #000;
 }
 
 .about p {
-  color: #2e2e2e;
+  color: #000;
 }
 
 .about-title img.kenan {
@@ -761,6 +734,7 @@ div.about-text {
   width: 100%;
   display: table;
   padding: 60px 0;
+  height: 100vh;
 }
 
 .contact-title {
@@ -822,11 +796,11 @@ form {
   background: transparent;
   height: 80px;
   text-align: center;
-  margin-top: 25px;
+  margin-top: 50px;
 }
 
 .footer .email {
-  color: #2e2e2e;
+  color: #000;
   padding-bottom: 15px;
 }
 
@@ -923,4 +897,71 @@ form {
 
 .thanks h2 {
   color: #50E3C2;
+}
+
+/* project pages
+==================================================*/
+.project-desc h3 {
+  margin-top: 0;
+}
+
+.mockup-responsive {
+  width: 100%;
+  text-align: center;
+}
+
+.mockup-responsive img {
+  width: 700px;
+}
+
+.tools-used {
+  padding-left: 0;
+  list-style: none
+}
+
+.tools-used li i {
+  margin-right: 10px;
+  color: #50E3C2;
+}
+
+.tools-used h4 {
+  width: 100%;
+}
+
+.tools-used .col-sm-6 {
+  padding-left: 0 !important;
+}
+
+.site-link {
+  background: #50E3C2;
+  color: #fff;
+  padding: 10px 25px;
+  border-radius: 50px;
+  text-transform: uppercase;
+  display: inline-block;
+  margin: 10px 0 15px 0;
+}
+
+.site-link:hover {
+  color: #fff;
+  text-decoration: none;
+  box-shadow: 0 10px 50px rgba(0, 0, 0, 0.25);
+}
+
+.desktop-background {
+  position: relative;
+}
+
+.screenshot {
+  max-width: 535px;
+  position: absolute;
+  top: 46%;
+  left: 50.2%;
+  transform: translateX(-50%) translateY(-50%);
+  display: none;
+}
+
+.project-logo {
+  width: 100px;
+  margin-left: -10px;
 }
