--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ a {
   background-image: url("../images/pattern.svg");
   background-size: 650px;
   background-repeat: repeat;
+  box-shadow: 0px 0 33px -14px rgba(0, 0, 0, 0.25);
 }
 
 .table-cell {
@@ -325,7 +326,7 @@ nav .button:focus, nav .button:active {
 	color: #000;
 	-webkit-overflow-scrolling: touch;
   background-color: #fff;
-  box-shadow: inset -15px 0 33px -14px rgba(0, 0, 0, 0.25);
+  /*box-shadow: inset -15px 0 33px -14px rgba(0, 0, 0, 0.25);*/
   text-align: center;
 }
 
