--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ a {
   background-image: url("../images/pattern.svg");
   background-size: 650px;
   background-repeat: repeat;
-  box-shadow: 0px 0 33px -14px rgba(0, 0, 0, 0.25);
+  box-shadow: -15px 0 33px -14px rgba(0, 0, 0, 0.25);
 }
 
 .table-cell {
@@ -136,6 +136,16 @@ h4, h5, h6 {
 p, a {
   font-family: "Soleil", sans-serif;
   font-weight: 100;
+}
+
+a, a:focus, a:active {
+  color: #50E3C2;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #000;
+  text-decoration: none;
 }
 
 /* preloader
@@ -644,7 +654,7 @@ nav .button:focus, nav .button:active {
 }
 
 .services .col-md-4 {
-  padding: 0px 75px;
+  padding: 0px 50px;
   margin-top: 50px;
 }
 
@@ -727,6 +737,10 @@ div.about-text {
   text-align: center;
   font-size: 20px;
   color: #50E3C2;
+}
+
+.mobile {
+  display: none;
 }
 
 /* contact section
@@ -965,4 +979,50 @@ form {
 .project-logo {
   width: 100px;
   margin-left: -10px;
+}
+
+/* responsive styling
+==================================================*/
+
+/* about page */
+
+@media (max-width: 768px) {
+  .mobile {
+    display: inherit;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .about .about-title.col-md-6 {
+    padding: 0;
+  }
+
+  .about-title h1 {
+    text-align: center;
+  }
+
+  .about .col-md-6 {
+    padding: 0 50px;
+    margin-top: 50px;
+  }
+
+  div.about-text {
+    width: 100%;
+  }
+
+  .about .table-cell {
+    padding: 0;
+  }
+}
+
+@media (max-width: 414px) {
+  .about-title h1, .services-title h1 {
+    font-size: 40px;
+  }
+
+  .form-control {
+    width: 100%;
+  }
 }
